--- a/templates/redmine.env.j2
+++ b/templates/redmine.env.j2
@@ -1,5 +1,5 @@
-REDMINE_DB_POSTGRES={{ db_host }}
-REDMINE_DB_PASSWORD={{ db_password }}
-REDMINE_DB_PORT={{ db_port}}
-REDMINE_DB_USERNAME={{ db_user }}
-REDMINE_DB_DATABASE={{ db_name }}
+REDMINE_DB_POSTGRES={{ redmine_db_host }}
+REDMINE_DB_PASSWORD={{ redmine_db_password }}
+REDMINE_DB_PORT={{ redmine_db_port}}
+REDMINE_DB_USERNAME={{ redmine_db_user }}
+REDMINE_DB_DATABASE={{ redmine_db_name }}
